--- a/src/components/Calendar/DateHeading/DateHeading.scss
+++ b/src/components/Calendar/DateHeading/DateHeading.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   align-items: center;
-  margin-top: -0.75rem;
+  margin-top: -0.5rem;
   margin-bottom: 1rem;
 }
 
