--- a/src/components/Calendar/index.scss
+++ b/src/components/Calendar/index.scss
@@ -20,10 +20,12 @@
 .overview {
   // flex: 0 0 60px;
   padding-bottom: 1rem;
-  padding: 0 1rem 1rem;
+  padding: 1rem 1rem 1rem;
+  background: #fcfcfc;
 
   @media (min-width: 768px) {
-    padding: 0 2.5rem 1rem;
+    background: transparent;
+    padding: 2rem 2.5rem 1rem;
     border-bottom: 1px solid #eaeaea;
   }
 }
@@ -75,10 +77,12 @@
   margin-top: 0.5rem;
   font-size: 16px;
 
-  display: flex;
   align-items: center;
 
+  display: none;
+
   @media (min-width: 768px) {
+    display: flex;
     margin-top: 0;
   }
 }
