--- a/src/components/RightPanel/styles.scss
+++ b/src/components/RightPanel/styles.scss
@@ -13,10 +13,12 @@
   overflow-x: hidden;
 
   @media (max-width: 992px) {
-    width: 100%;
     height: auto;
     padding: 0;
     border: none;
+    margin: 0;
+    width: 100%;
+    padding: 0 16px;
   }
 
   @media (min-width: 1082px) {
