--- a/src/layouts/MainLayout/styles.scss
+++ b/src/layouts/MainLayout/styles.scss
@@ -14,7 +14,8 @@
   // border-right: 1px solid;
   position: relative;
   // padding: 20px;
-  padding: 20px 0;
+  // padding: 20px 0;
+  padding: 0 0 20px;
   padding-bottom: 40px;
   flex: 1 1 auto;
   display: flex;
